[gd_scene load_steps=7 format=2]

[ext_resource path="res://Recursos/Vitoria.png" type="Texture" id=1]
[ext_resource path="res://script_vitoria.gd" type="Script" id=2]
[ext_resource path="res://Recursos/metal lord.ttf" type="DynamicFontData" id=3]

[sub_resource type="Animation" id=1]
resource_name = "voltar"
length = 1.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Label:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Color( 1, 1, 1, 1 ), Color( 0, 0, 0, 1 ), Color( 1, 1, 1, 1 ), Color( 0, 0, 0, 1 ), Color( 1, 1, 1, 1 ), Color( 0, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="DynamicFont" id=2]
size = 32
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 32
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 2 )

[node name="Vitoria" type="Sprite" parent="."]
position = Vector2( 512.785, 299.892 )
scale = Vector2( 0.534712, 0.556029 )
texture = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/voltar = SubResource( 1 )

[node name="Label" type="Label" parent="."]
modulate = Color( 0, 0, 0, 1 )
margin_left = 216.0
margin_top = 552.0
margin_right = 813.0
margin_bottom = 591.0
custom_fonts/font = SubResource( 2 )
text = "pressione enter para voltar ao menu"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="."]
margin_left = 560.0
margin_top = 160.0
margin_right = 740.0
margin_bottom = 241.0
custom_fonts/font = SubResource( 2 )
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="."]
margin_left = 544.0
margin_top = 8.0
margin_right = 734.0
margin_bottom = 89.0
custom_fonts/font = SubResource( 3 )
text = "Pontuação
564"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HTTPRequest" type="HTTPRequest" parent="."]
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
